--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clsx": "^2.0.0",
     "next": "14.0.3",
     "react": "^18",
+    "react-aria-components": "^1.0.0-rc.0",
     "react-dom": "^18"
   },
   "devDependencies": {
